--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,17 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
           path: project-repo
-          
+
+      - name: Parse dbt project and package with Dagster project
+        if: steps.prerun.outputs.result == 'pex-deploy'
+        run: |
+          pip install pip --upgrade
+          pip install dbt-duckdb
+          cd project-repo/analytics
+          dbt deps
+          dbt parse
+        shell: bash
+
       - name: Python Executable Deploy
         if: steps.prerun.outputs.result == 'pex-deploy'
         uses: dagster-io/dagster-cloud-action/actions/build_deploy_python_executable@v0.1
